[package]
name = "json_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.1.8", features = ["derive"] }
seahash = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ip_network = "0.4"
ip_network_table = "0.2.0"
reqwest = {version ="0.11.18", features = ["json"]}
tokio = { version = "1.31.0", features = ["full"] }
csv ="1.2.2"